# luxar-embedded-agent

./: .gitignore  CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  agent.md  generate_html.py  pyproject.toml  soul.md
config/: luxar.yaml
docs/: sample_sensor.txt
skill_library/protocols/spi/: SKILL.md  metadata.json
src/luxar/: __init__.py  cli.py
src/luxar/core/: __init__.py  app_generator.py  assembler.py  asset_reuse.py  backup_manager.py  build_system.py  code_fixer.py  config_manager.py  context_compressor.py  conversation_store.py  debug_loop.py  document_engineering.py  driver_generator.py  driver_library.py  driver_pipeline.py  firmware_library_manager.py  flash_system.py  git_manager.py  knowledge_base.py  llm_client.py  lock_manager.py  logger.py  memory_store.py  pdf_parser.py  platform_adapter.py  project_manager.py  project_planner.py  review_engine.py  skill_extractor.py  skill_manager.py  task_router.py  toolchain_manager.py  uart_monitor.py  workflow_engine.py
src/luxar/models/: __init__.py  schemas.py
src/luxar/prompts/: __init__.py  app_generation.py  driver_generation.py  fix_code.py  gates.py  project_planning.py  semantic_review.py  skill_evolution.py
src/luxar/server/: __init__.py  app.py
src/luxar/tools/: __init__.py  assemble_project.py  build_project.py  check_ioc.py  debug_loop_project.py  fix_code.py  flash_project.py  forge_project.py  generate_driver.py  generate_driver_loop.py  parse_doc.py  (+7 more)
tests/unit/: test_app_generator.py  test_assemble_project.py  test_asset_reuse.py  test_build_review_gate.py  test_cli.py  test_code_fixer.py  test_config_manager.py  test_debug_graph.py  test_debug_loop.py  test_document_engineering.py  test_driver_generator.py  test_driver_graph.py  test_driver_library.py  test_driver_pipeline.py  test_forge_project.py  test_knowledge_base.py  test_llm_client.py  test_memory_store.py  test_pdf_parser.py  test_project_import.py  test_project_manager.py  test_project_planner.py  test_review_engine.py  test_server_app.py  test_skill_manager.py  test_task_router.py  test_ui_shell.py  test_workflow_engine.py
ui/public/: index.html
workspace/: agent.md
workspace/projects/LedBlink/.agent_backups/20260427_221003_debug_loop/: CMakeLists.txt
workspace/projects/LedBlink/.agent_backups/20260427_221003_debug_loop/App/Src/: app_main.c
workspace/toolchains/: README.md
(+73 files in other folders)
