[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Luxar"
version = "0.1.0"
description = "CLI-driven embedded development toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich-click>=1.8",
  "pydantic>=2.7",
  "ruamel.yaml>=0.18",
  "langgraph>=0.2",
  "GitPython>=3.1",
  "portalocker>=3.0",
  "pyserial>=3.5",
  "numpy>=1.26",
  "sentence-transformers>=3.0",
  "tenacity>=8.0",
  "sqlite-vec>=0.1",
]

[project.optional-dependencies]
pdf = [
  "docling>=2.0",
  "pymupdf>=1.23",
  "rapidocr-onnxruntime>=1.2",
]

[project.scripts]
luxar = "luxar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



